--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,21 @@
     tools:context=".MainActivity">
 
     <com.wzjing.views.XScrollView
+        android:layout_width="180dp"
+        android:layout_height="90dp"
         android:background="#ffffff"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:maxHeight="100dp"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent"
+        app:maxHeight="100dp">
+
         <TextView
+            android:background="#CFCFCF"
+            android:layout_margin="20dp"
             android:layout_width="match_parent"
-            android:text="Hello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\nHello World!\n"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="Line\nLine\nLine\nLine\nLine\nLine\nLine\nLine\nLine\nLine\nLine\nLine\nLine" />
     </com.wzjing.views.XScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
